prevent vertical stretch of message log

--- a/style/container-layout.css
+++ b/style/container-layout.css
@@ -26,11 +26,19 @@
   padding: 15px;
 }
 #ui-sidebar {
+  display: flex;
+  align-items: stretch;
+  flex-direction: column;
   margin-right: 5px;
+  max-height: 50%;
   height: 80vh;
-  max-height: 80vh;
   width: 50% !important;
   max-width: 24vw !important;
+}
+#ui-msglog {
+  height: calc(100% - 58px);
+  width: 100%;
+  overflow-y: scroll;
 }
 #ui-sidebar > div,
 #ui-inventory > div {
@@ -44,7 +52,7 @@
 }
 .layout-item {
   margin: 0px 9px;
-  padding: 5px 20px;
+  padding: 5px 0px;
   line-height: 1.4;
   text-align: center;
 }
