--- a/style/style.css
+++ b/style/style.css
@@ -17,12 +17,13 @@ body {
   text-align: center;
 }
 .indivlog {
-  padding: 8px;
+  padding: 6px;
   border-color: black;
   border-style: solid;
   border-width: 1px 0px;
   margin: -1px auto;
   overflow-wrap: break-word;
+  height: min-content;
 }
 .footer-button {
   border: 2px solid lightskyblue !important;
